force-app/main/default/objects/Plan_Template_Component__c.object
<CustomObject>
    <description>Represents components that are part of a plan template</description>
    <fields>
        <fullName>Component_Name__c</fullName>
        <formula>Plan_Component__r.Name</formula>
        <label>Component Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <formula>TEXT(Plan_Component__r.Product_Component_Type__c)</formula>
        <label>Component Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Base_Component__c</fullName>
        <formula>Plan_Component__r.Is_Base_Component__c</formula>
        <label>Is Base Component</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Component__c</fullName>
        <label>Plan Component</label>
        <referenceTo>Plan_Component__c</referenceTo>
        <relationshipLabel>Plan Template Components</relationshipLabel>
        <relationshipName>Plan_Template_Component</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Plan_Template__c</fullName>
        <label>Plan Template</label>
        <referenceTo>Plan_Template__c</referenceTo>
        <relationshipLabel>Plan Template Components</relationshipLabel>
        <relationshipName>Package_Framework_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Plan Template Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>PTC-{00000000}</displayFormat>
        <label>Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Template Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>